Fix weird spacing for paragraphs in lists

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -86,7 +86,8 @@ ol {
 
 li {
 	> ul,
-	> ol {
+	> ol,
+	> p {
 		margin-bottom: 0;
 	}
 }
